@@ -20,6 +20,10 @@ MA 02111-1307, USA.
 
 2003-11-05  Torbjorn Granlund  <tege@swox.com>
 
+	* mpn/powerpc64/linux64.m4: New file.
+	* configure.in (POWERPC64_PATTERN): Handle *-*-linux*.
+	Use linux64.m4.
+
 	* mpn/ia64/logops_n.asm: New file.
 
 2003-11-05  Kevin Ryde  <kevin@swox.se>
